--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,21 @@ env/
 __pycache__/
 *.pyc
 
-# Otros archivos o carpetas que no desees subir (ajusta según tu proyecto)
+# Ignorar dependencias de Node (frontend)
+frontend/node_modules/
+
+# Ignorar la carpeta de compilación de Next.js
+frontend/.next/
+frontend/out/
+
+# Ignorar archivos de entorno (si los tienes)
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+# Ignorar archivos temporales y de sistema
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
