--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,7 +16,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve" // O "react" si prefieres
+    "jsx": "react-jsx"
     ,
     "incremental": true,
     "plugins": [
